# PythonFastAPIPoetry

./: .env  Dockerfile  asyncsession_maker.py  dao.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  run (server).py  seed_data.py
DataBase/: dao.py  models.py
JWT/: token_handler.py
ScreenShots, checklists, other files development branch/: CheckList#2practice.txt  git_history #1.txt  main(COPY, labaratory files #2).py
authentication/: dependencies.py
cookies/: manager.py
core/: asyncsession_maker.py  config.py
migrations/: env.py
migrations/versions/: 705e3f5bb1d4_initial_migration.py
routers/: authentication.py  categories.py  orders.py  products.py  profiles.py  users.py
schemas/: schemas.py
