[tool.poetry]
name = "1practiceprogramingpython"
version = "0.1.0"
description = ""
authors = ["DimaL007"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.133.1"
uvicorn = "^0.41.0"
email-validator = "^2.3.0"
myapplication = "^0.1.0"
the-new-hotness = "^1.3.0"
django-email-users = "^2.1.0"
pydantic2 = "^1.1.15"
poetry = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
